[gd_scene load_steps=4 format=3 uid="uid://poi6dm2h6chy"]

[ext_resource type="Script" path="res://Scripts/home_screen.gd" id="1_2jd5u"]
[ext_resource type="Texture2D" uid="uid://d12uvt8g3fqvs" path="res://Assets/home_screen.png" id="1_3fqg3"]
[ext_resource type="FontFile" uid="uid://ccq0hnvmkqnrl" path="res://Assets/fonts/Boxy-Bold.ttf" id="2_p1wa3"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jd5u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(640, 360)
scale = Vector2(2, 2)
texture = ExtResource("1_3fqg3")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 888.0
offset_top = 284.0
offset_right = 1248.0
offset_bottom = 556.0

[node name="iamlost" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_p1wa3")
theme_override_font_sizes/font_size = 50
text = "i am lost"

[node name="controls" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_p1wa3")
theme_override_font_sizes/font_size = 50
text = "controls"

[node name="credits" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_p1wa3")
theme_override_font_sizes/font_size = 50
text = "credits"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
offset_top = 576.0
offset_right = 1280.0
offset_bottom = 704.0
alignment = 1

[node name="play" type="Button" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p1wa3")
theme_override_font_sizes/font_size = 100
text = "play"

[node name="SceneChangeTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/iamlost" to="." method="_on_iamlost_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/play" to="." method="_on_play_pressed"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
